Fixed dragged subobject card missing next collapsed card when being dragged over.

--- a/src/styles/subobjects.css
+++ b/src/styles/subobjects.css
@@ -52,25 +52,6 @@ div.composite-subobject-card.expanded {
     padding-bottom: var(--subobject-card-padding-top-bottom);
 }
 
-
-/* Smooth dragged card change */
-div.composite-subobject-card-container:not(:first-child) div.composite-subobject-card-dropzone {
-    /* Reduce space between dropzone and previous subobject card to enable smooth dragging over next card in the same column
-       (if additional space taken by dropzone if too large, next collapsed card will be missed when moving down the column,
-       because previous card stops being dragged over earlier than the next one begins to;
-       a potential way to fix this is add padding-top to the next container instead of padding-bottom to the current one)  */
-    margin-top: calc(-1 * var(--subobject-card-default-margin-bottom) + 0.5em);
-}
-
-div.composite-subobject-card-container.is-dragged-over {    /* replace margin-bottom of the `composite-subobject-card` with padding-bottom of its container */
-    padding-bottom: var(--subobject-card-default-margin-bottom);
-}
-
-div.composite-subobject-card.is-dragged-over, div.composite-subobject-card.add-menu.is-dragged-over {
-    margin-bottom: 0;
-}
-
-
 /* Full card placeholders (loader, error) */
 div.composite-subobject-card.no-padding {
     padding: 0;
